@@ -1,2 +1,2 @@
 [Icon Data]
-AttachPoints=160,700|800,700|800,80|160,80
+AttachPoints=160,500|800,500|800,80|160,80
